--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>PORTFOLIO</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <div id="header">
@@ -28,7 +28,9 @@
             </div>
         </div>
     </div>
-    <!-- ---------------------about------------------------ -->
+
+    <!-- -------------------------------------------about-------------------------------------------------- -->
+
     <div id="about">
         <div class="container">
             <div class="row">
@@ -70,7 +72,7 @@
         </div>
     </div>
 
-    <!-- ------------------------Services--------------------------- -->
+    <!-- ----------------------------------------------Services--------------------------------------------- -->
 
     <div id="services">
         <div class="container">
@@ -98,7 +100,8 @@
         </div>
     </div>
 
-    <!-- -----------------------------portfolio--------------------------------- -->
+    <!-- ----------------------------------------------portfolio----------------------------------------------- -->
+
     <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
@@ -132,8 +135,8 @@
         </div>
     </div>
 
+    <!-- ------------------------------------------Contact------------------------------------------------ -->
 
-    <!-- ---------------------------Contact------------------------------- -->
     <div id="contact">
         <div class="container">
             <div class="row">
@@ -165,6 +168,7 @@
         </div>
     </div>
 
+    <!-- ----------------------------------------------------------------------------------------------------- -->
 
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
