--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/1111.jpg" alt="image 1111">
+                    <img src="images/dilanka.jpg" alt="image 1111">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
