--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         </div>
     </div>
 
-    <!-- ----------------------------------------------portfolio----------------------------------------------- -->
+    <!-- ----------------------------------------------My Work----------------------------------------------- -->
 
     <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/web.png" alt="image">
+                    <img src="images/Aloka_Travels.png" alt="image">
                     <div class="layer">
                         <h3>Web</h3>
                         <p>Expanding knowledge by working with modern technology.</p>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/uiux.png" alt="image">
+                    <img src="images/POS_Software_UI.png" alt="image">
                     <div class="layer">
                         <h3>UI / UX</h3>
                         <p>Expanding knowledge by working with modern technology.</p>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/software.png" alt="image">
+                    <img src="images/POS_Software.png" alt="image">
                     <div class="layer">
                         <h3>Software</h3>
                         <p>Expanding knowledge by working with modern technology.</p>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="#" class="btn btn1">See more</a>
         </div>
     </div>
 
