--- a/index.html
+++ b/index.html
@@ -50,23 +50,24 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App  Interfaces</li>
-                            <li><span>Web Development</span><br>Web Development</li>
-                            <li><span>App Development</span><br>App Development</li>
+                            <li><span>Programming Languages</span><br>Java | Python</li>
+                            <li><span>Web Development</span><br>HTML | CSS | JavaScript | PHP</li>
+                            <li><span>Frameworks</span><br>React | Spring Boot</li>
+                            <li><span>Database</span><br>GIT</li>
+                            <li><span>Version Controlling</span><br>React | Spring Boot</li>
+                            <li><span>Other</span><br>Jupyter Notebook | Google Colab</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2021 - Current</span><br>UI/UX Design Training at ET</li>
-                            <li><span>2019 - 2021</span><br>Team lead at StarApp LLC.</li>
-                            <li><span>2016 - 2017</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
+                            <li><span>2018 - Present</span><br>Freelance Software Developer | VIRUVO<br><br>Creating business management software and websites based on customer needs is a process that involves understanding the unique requirements of each individual customer and developing customized solutions that address those needs. It often involves a collaborative approach, with other developers working closely with clients to identify their specific needs and requirements.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
-                            <li><span>2016</span><br>MBA from MIT Sri Lanka</li>
-                            <li><span>2014</span><br>BBA from ISM Sri Lanka</li>
+                            <li><span>2023 - Final Semester</span><br>BSc (Hons) Software Engineering<br>Cardiff Metropolitan University @ ICBT</li>
+                            <li><span>2019 - 2021</span><br>Professional Diploma in software Engineering - SCQF Level 7<br>Java Institute for Advanced Technology</li>
+                            <li><span>2017</span><br>A/L Examination</li>
                         </ul>
                     </div>
                 </div>
