--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/D.png" />
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -53,8 +54,8 @@
                             <li><span>Programming Languages</span><br>Java | Python</li>
                             <li><span>Web Development</span><br>HTML | CSS | JavaScript | PHP</li>
                             <li><span>Frameworks</span><br>React | Spring Boot</li>
-                            <li><span>Database</span><br>GIT</li>
-                            <li><span>Version Controlling</span><br>React | Spring Boot</li>
+                            <li><span>Database</span><br>MySQL | MongoDB</li>
+                            <li><span>Version Controlling</span><br>GIT</li>
                             <li><span>Other</span><br>Jupyter Notebook | Google Colab</li>
                         </ul>
                     </div>
@@ -89,7 +90,7 @@
                 </div>
                 <div>
                     <i><img src="images/uiux.png" alt="icon"></i>
-                    <h2>UI/UX Design</h2>
+                    <h2>UI / UX Design</h2>
                     <p>I build stunning UI / UX that capture the users' imaginations.</p>
                     <!-- <a href="#">Learn more</a> -->
                 </div>
