--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/D.png" />
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <title>Dilanka</title>
 </head>
 <body>
     <div id="header">
