--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>As an undergraduate software engineer with a strong academic foundation in computer science and programming, I am eager to contribute my skills and knowledge to a dynamic and innovative team. My passion for coding, coupled with my ability to quickly learn new technologies, makes me a valuable asset to any software development project.</p>
+                    <p>As an software engineer with a strong academic foundation in computer science and programming, I am eager to contribute my skills and knowledge to a dynamic and innovative team. My passion for coding, coupled with my ability to quickly learn new technologies, makes me a valuable asset to any software development project.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2023 - Final Semester</span><br>BSc (Hons) Software Engineering<br>Cardiff Metropolitan University @ ICBT</li>
+                            <li><span>2022 - 2023</span><br>BSc (Hons) Software Engineering<br>Cardiff Metropolitan University @ ICBT</li>
                             <li><span>2019 - 2021</span><br>Professional Diploma in software Engineering - SCQF Level 7<br>Java Institute for Advanced Technology</li>
                             <li><span>2017</span><br>A/L Examination</li>
                         </ul>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn btn1">See more</a>
+            <!-- <a href="#" class="btn btn1">See more</a> -->
         </div>
     </div>
 
