--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <li><span>Web Development</span><br>HTML | CSS | JavaScript | PHP</li>
                             <li><span>Frameworks</span><br>React | Spring Boot</li>
                             <li><span>Database</span><br>MySQL | MongoDB</li>
-                            <li><span>Version Controlling</span><br>GIT</li>
+                            <li><span>Version Controlling</span><br>GITHUB</li>
                             <li><span>Other</span><br>Jupyter Notebook | Google Colab</li>
                         </ul>
                     </div>
