Add new section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,43 @@
 
     <!-- ----------------------------------------------------------------------------------------------------- -->
 
+    <div class="wrapper">
+        <i id="left"><img src="images/left.png" alt="left"></i>
+        <ul class="carousel">
+            <li class="card">
+                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
+                <h2>Mr. First Name</h2>
+                <span>Software Engineer</span>
+            </li>
+            <li class="card">
+                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
+                <h2>Mr. First Name</h2>
+                <span>Software Engineer</span>
+            </li>
+            <li class="card">
+                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
+                <h2>Mr. First Name</h2>
+                <span>Software Engineer</span>
+            </li>
+            <li class="card">
+                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
+                <h2>Mr. First Name</h2>
+                <span>Software Engineer</span>
+            </li>
+            <li class="card">
+                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
+                <h2>Mr. First Name</h2>
+                <span>Software Engineer</span>
+            </li>
+            <li class="card">
+                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
+                <h2>Mr. First Name</h2>
+                <span>Software Engineer</span>
+            </li>
+        </ul>
+        <i id="right"><img src="images/right.png" alt="right"></i>
+    </div>
+
     <!-- ---------------- Script for about area active link ---------------- -->
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
