--- a/index.html
+++ b/index.html
@@ -183,34 +183,19 @@
         <i id="left"><img src="images/left.png" alt="left"></i>
         <ul class="carousel">
             <li class="card">
-                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
-                <h2>Mr. First Name</h2>
-                <span>Software Engineer</span>
+                <div class="img"><img src="images/web.png" alt="img" draggable="false"></div>
+                <h2>Web Design</h2>
+                <span>Creating scalable engineering solutions with architectural backbone.</span>
             </li>
             <li class="card">
                 <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
-                <h2>Mr. First Name</h2>
-                <span>Software Engineer</span>
+                <h2>UI / UX Design</h2>
+                <span>I build stunning UI / UX that capture the users' imaginations.</span>
             </li>
             <li class="card">
-                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
-                <h2>Mr. First Name</h2>
-                <span>Software Engineer</span>
-            </li>
-            <li class="card">
-                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
-                <h2>Mr. First Name</h2>
-                <span>Software Engineer</span>
-            </li>
-            <li class="card">
-                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
-                <h2>Mr. First Name</h2>
-                <span>Software Engineer</span>
-            </li>
-            <li class="card">
-                <div class="img"><img src="images/uiux.png" alt="img" draggable="false"></div>
-                <h2>Mr. First Name</h2>
-                <span>Software Engineer</span>
+                <div class="img"><img src="images/software.png" alt="img" draggable="false"></div>
+                <h2>Software Design</h2>
+                <span>My full range of IT services is a one-stop solution for your business.</span>
             </li>
         </ul>
         <i id="right"><img src="images/right.png" alt="right"></i>
