--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
                         <ul>
                             <li><span>2022 - 2023</span><br>BSc (Hons) Software Engineering<br>Cardiff Metropolitan University @ ICBT</li>
                             <li><span>2019 - 2021</span><br>Professional Diploma in software Engineering - SCQF Level 7<br>Java Institute for Advanced Technology</li>
-                            <li><span>2017</span><br>A/L Examination</li>
                         </ul>
                     </div>
                 </div>
@@ -79,7 +78,7 @@
 
     <!-- ----------------------------------------------Services--------------------------------------------- -->
 
-    <div id="services">
+    <!-- <div id="services">
         <div class="container">
             <h1 class="sub-title">My Services</h1>
             <div class="services-list">
@@ -87,23 +86,20 @@
                     <i><img src="images/web.png" alt="icon"></i>
                     <h2>Web Design</h2>
                     <p>Creating scalable engineering solutions with architectural backbone.</p>
-                    <!-- <a href="#">Learn more</a> -->
                 </div>
                 <div>
                     <i><img src="images/uiux.png" alt="icon"></i>
                     <h2>UI / UX Design</h2>
                     <p>I build stunning UI / UX that capture the users' imaginations.</p>
-                    <!-- <a href="#">Learn more</a> -->
                 </div>
                 <div>
                     <i><img src="images/software.png" alt="icon"></i>
                     <h2>Software Design</h2>
                     <p>My full range of IT services is a one-stop solution for your business.</p>
-                    <!-- <a href="#">Learn more</a> -->
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
         <!-- ----------------------------------------------------------------------------------------------------- -->
 
