--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <a href="#"><i><img src="images/twitter.png" alt="social_icons"></i></a>
                     </div>
                     <!-- PDF Download option -->
-                    <a href="images/VIRUVO_POS.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/Dilanka_CV.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
