--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="layer">
                         <h3>POS Software</h3>
                         <p>Over 25+ businesses around Sri Lanka use this POS.</p>
-                        <a href="https://www.viruvo.com/"><i><img src="images/view.png" alt="icon"></i></a>
+                        <a href="images/VIRUVO_POS.pdf" download class="btn btn2">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i><img src="images/mail.png" alt="mail"></i>dilankarashmika10@gmail.com</p>
-                    <p><i><img src="images/phone.png" alt="phone"></i>+9478962977</p>
+                    <p><i><img src="images/phone.png" alt="phone"></i>+94**********</p>
                     <div class="social-icons">
                         <a href="#"><i><img src="images/facebook.png" alt="social_icons"></i></a>
                         <a href="#"><i><img src="images/instagram.png" alt="social_icons"></i></a>
