--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                     <p><i><img src="images/mail.png" alt="mail"></i>dilankarashmika10@gmail.com</p>
                     <p><i><img src="images/phone.png" alt="phone"></i>+94**********</p>
                     <div class="social-icons">
-                        <a href="#"><i><img src="images/facebook.png" alt="social_icons"></i></a>
-                        <a href="#"><i><img src="images/instagram.png" alt="social_icons"></i></a>
-                        <a href="#"><i><img src="images/linkedin.png" alt="social_icons"></i></a>
-                        <a href="#"><i><img src="images/twitter.png" alt="social_icons"></i></a>
+                        <!-- <a href="#"><i><img src="images/facebook.png" alt="social_icons"></i></a> -->
+                        <!-- <a href="#"><i><img src="images/instagram.png" alt="social_icons"></i></a> -->
+                        <a href="https://www.linkedin.com/in/dilankarw/"><i><img src="images/linkedin.png" alt="social_icons"></i></a>
+                        <a href="https://www.facebook.com/dilankarw/"><i><img src="images/twitter.png" alt="social_icons"></i></a>
                     </div>
                     <!-- PDF Download option -->
                     <a href="images/Dilanka_CV.pdf" download class="btn btn2">Download CV</a>
