--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="layer">
                         <h3>POS Software</h3>
                         <p>Over 25+ businesses around Sri Lanka use this POS.</p>
-                        <a href="images/VIRUVO_POS.pdf" download class="btn btn2">Download CV</a>
+                        <a href="images/VIRUVO_POS.pdf"><i><img src="images/view.png" alt="icon"></i></a>
                     </div>
                 </div>
             </div>
