--- a/index.html
+++ b/index.html
@@ -152,7 +152,15 @@
                     <div class="layer">
                         <h3>POS Software</h3>
                         <p>Over 25+ businesses around Sri Lanka use this POS.</p>
-                        <a href="images/VIRUVO_POS.pdf"><i><img src="images/view.png" alt="icon"></i></a>
+                        <a href="https://www.viruvo.com/"><i><img src="images/view.png" alt="icon"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/Smart_Warehouse.png" alt="image">
+                    <div class="layer">
+                        <h3>Smart Warehouse</h3>
+                        <p>Warehouse management system</p>
+                        <a href="https://www.viruvo.com/"><i><img src="images/view.png" alt="icon"></i></a>
                     </div>
                 </div>
             </div>
