--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
                         <a href="https://www.viruvo.com/"><i><img src="images/view.png" alt="icon"></i></a>
                     </div>
                 </div>
+                <div class="work">
+                    <img src="images/Travel_Web.png" alt="image">
+                    <div class="layer">
+                        <h3>Travel Website</h3>
+                        <p>Travel Website Project</p>
+                        <a href="https://github.com/DilankaRW/Travel-Web"><i><img src="images/view.png" alt="icon"></i></a>
+                    </div>
+                </div>
             </div>
             <!-- <a href="#" class="btn btn1">See more</a> -->
         </div>
