--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="layer">
                         <h3>Smart Warehouse</h3>
                         <p>Warehouse management system</p>
-                        <a href="https://www.viruvo.com/"><i><img src="images/view.png" alt="icon"></i></a>
+                        <a href="https://github.com/DilankaRW"><i><img src="images/view.png" alt="icon"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -169,6 +169,14 @@
                         <h3>Travel Website</h3>
                         <p>Travel Website Project</p>
                         <a href="https://github.com/DilankaRW/Travel-Web"><i><img src="images/view.png" alt="icon"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/Weather-WebApp.png" alt="image">
+                    <div class="layer">
+                        <h3>Weather WebApp</h3>
+                        <p>Practice Project</p>
+                        <a href="https://github.com/DilankaRW"><i><img src="images/view.png" alt="icon"></i></a>
                     </div>
                 </div>
             </div>
