--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
                     </div>
                 </div>
                 <div class="work">
+                    <img src="images/TastyTrack.png" alt="image">
+                    <div class="layer">
+                        <h3>TastyTrack Order System</h3>
+                        <p>Food Ordering System</p>
+                        <a href="https://github.com/DilankaRW/TastyTrack-Order-System"><i><img src="images/view.png" alt="icon"></i></a>
+                    </div>
+                </div>
+                <div class="work">
                     <img src="images/GemProphet.png" alt="image">
                     <div class="layer">
                         <h3>GemProphet</h3>
