--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2018 - Present</span><br>Freelance Software Developer | VIRUVO<br><br>Creating business management software and websites based on customer needs is a process that involves understanding the unique requirements of each individual customer and developing customized solutions that address those needs. It often involves a collaborative approach, with other developers working closely with clients to identify their specific needs and requirements.</li>
+                            <li><span>2022 - Present</span><br>Freelance Software Developer | Inner Creations Pvt Ltd.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
