Open Graph / Social Media Meta Tags

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <meta name="googlebot" content="index, follow" />
     <meta name="bingbot" content="index, follow" />
 
+    <!-- Open Graph / Social Media Meta Tags -->
+    <!-- Social Media Tags (Open Graph & Twitter): These help improve the display and engagement of your pages when shared on social media platforms. -->
+    <meta property="og:title" content="dilankarw" />
+    <!-- Your Page Title -->
+    <meta
+      property="og:description"
+      content="Boost your business with digital world"
+    />
+    <!-- Brief description of your page content for social sharing. -->
+    <meta property="og:image" content="http://dilankarw.com/image.jpg" />
+    <meta property="og:url" content="http://dilankarw.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="dilankarw" />
+    <!-- Your Site Name -->
+
     <link rel="icon" href="images/D.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
