Twitter Card Meta Tags

--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
     <meta property="og:site_name" content="dilankarw" />
     <!-- Your Site Name -->
 
+    <!-- Twitter Card Meta Tags -->
+    <!-- Canonical Tag: Prevents duplicate content issues by specifying the preferred version of a URL. -->
+    <meta name="twitter:card" content="trip_image" />
+    <!-- summary_large_image -->
+    <meta name="twitter:title" content="dilankarw" />
+    <!-- Your Page Title for Twitter -->
+    <meta
+      name="twitter:description"
+      content="Boost your business with digital world"
+    />
+    <!--Description for Twitter, similar to Open Graph -->
+    <meta name="twitter:image" content="http://dilankarw.com/image.jpg" />
+
     <link rel="icon" href="images/D.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
