Additional SEO Tags

--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
     <!--Description for Twitter, similar to Open Graph -->
     <meta name="twitter:image" content="http://dilankarw.com/image.jpg" />
 
+    <!-- Additional SEO Tags -->
+    <meta
+      name="robots"
+      content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+    <!-- Allows search engines to fully display snippets -->
+    <link rel="canonical" href="http://dilankarw.com/image.jpg" />
+    <!-- Preferred URL for your content -->
+    <meta name="distribution" content="global" />
+    <!-- Specifies the distribution of your content (usually global) -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Ensures compatibility with IE browser -->
+    <meta name="theme-color" content="#ffffff" />
+    <!-- Sets the color of the browser address bar on mobile devices -->
+
+    
+
     <link rel="icon" href="images/D.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
