Structured Data (JSON-LD for SEO)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,26 @@
     <meta name="theme-color" content="#ffffff" />
     <!-- Sets the color of the browser address bar on mobile devices -->
 
-    
+    <!-- Structured Data (JSON-LD for SEO) -->
+    <!-- Structured Data (JSON-LD): Helps search engines better understand the content of your page and can improve rich results (e.g., featured snippets, knowledge panels). -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Your Page Title",
+        "description": "Your page description here",
+        "url": "http://dilankarw.com",
+        "image": "http://dilankarw.com/image.jpg",
+        "publisher": {
+          "@type": "Organization",
+          "name": "dilankarw",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "http://dilankarw.com/logo.jpg"
+          }
+        }
+      }
+    </script>
 
     <link rel="icon" href="images/D.png" />
     <link rel="stylesheet" href="style.css" />
